# camera_capture

./: .coveragerc  .gitignore  camera_locations.json  camera_locations.txt  license.txt  pyproject.toml  readme.md
src/camera/: __init__.py  camera.py  camera_locations.py  capture.py  capture_functions.py  cli_parser.py  config.py  font.py  kenya_capture.py  timing_functions.py
tests/camera/: test_capture.py  test_capture_functions.py  test_cli_parser.py  test_config.py  test_load_camera_locations.py  test_timing.py
