[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camera_capture"
version = "0.1.0"
description = "A script to capture and process webcam data."
authors = [{ name = "Willem Nieuwenhuis", email = "w.nieuwenhuis@utwente.nl" }]
dependencies = ["requests", "beautifulsoup4", "pillow"]
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage"]
lint = ["autopep8", "flake8"]
